Match names retrieved from the identity checks

--- a/lang/cy.json
+++ b/lang/cy.json
@@ -408,6 +408,7 @@
     "identifyYourselfWithYoti": "Profi pwy ydych chi gyda’r ap Yoti",
     "scanWithTheYotiApp": "Sganiwch gyda’r ap Yoti",
     "yourIdentityConfirmedWithYoti": "Cadarnhawyd eich manylion adnabod gyda Yoti",
+    "yourIdentityNotConfirmedWithYoti": "Welsh",
     "yourIdentityConfirmedWithOneLogin": "Welsh",
     "yourIdentityNotConfirmedWithOneLogin": "Welsh",
     "pleaseContinueWithADifferentMethod": "Welsh",
