update content/design for CP identity guidance

--- a/lang/cy.json
+++ b/lang/cy.json
@@ -583,5 +583,10 @@
     },
     "readDonorNameLpa": "Welsh {{ .DonorFullName }}’s welsh",
     "youMustReadLpaCarefully": "Welsh.",
-    "peopleToNotifyAboutTheLpa": "Welsh"
+    "peopleToNotifyAboutTheLpa": "Welsh",
+
+    "confirmYourIdentity": "Welsh",
+    "confirmYourIdentityContent": "<p class=\"govuk-body\">Welsh.</p>",
+    "whatYoullNeed": "<h2 class=\"govuk-heading-m\">Welsh</h2><p class=\"govuk-body\">Welsh:</p>",
+    "identityDocumentsList": "<ul class=\"govuk-list govuk-list--bullet govuk-list--spaced\"><li><span class=\"govuk-body govuk-!-font-weight-bold\">Welsh</span></li></ul>"
 }
