--- a/lang/cy.json
+++ b/lang/cy.json
@@ -592,7 +592,5 @@
     "requestANewWitnessCode":  "welsh",
 
     "confirmYourIdentity": "Welsh",
-    "confirmYourIdentityContent": "<p class=\"govuk-body\">Welsh.</p>",
-    "whatYoullNeed": "<h2 class=\"govuk-heading-m\">Welsh</h2><p class=\"govuk-body\">Welsh:</p>",
-    "identityDocumentsList": "<ul class=\"govuk-list govuk-list--bullet govuk-list--spaced\"><li><span class=\"govuk-body govuk-!-font-weight-bold\">Welsh</span></li></ul>"
+    "confirmYourIdentityContent": "<p class=\"govuk-body\">Welsh.</p><h2 class=\"govuk-heading-m\">Welsh</h2><p class=\"govuk-body\">Welsh:</p><ul class=\"govuk-list govuk-list--bullet govuk-list--spaced\"><li><span class=\"govuk-body govuk-!-font-weight-bold\">Welsh</span></li></ul>"
 }
