--- a/lang/cy.json
+++ b/lang/cy.json
@@ -603,5 +603,6 @@
     "yourDateOfBirth": "Welsh",
     "aValidDateOfBirth": "Welsh",
     "youAreUnder18Error": "Welsh",
-    "aValidUkMobileLike": "Welsh"
+    "aValidUkMobileLike": "Welsh",
+    "yourUkMobile": "welsh"
 }
