--- a/lang/cy.json
+++ b/lang/cy.json
@@ -595,7 +595,7 @@
     "confirmYourIdentity": "Welsh",
     "confirmYourIdentityContent": "<p class=\"govuk-body\">Welsh.</p><h2 class=\"govuk-heading-m\">Welsh</h2><p class=\"govuk-body\">Welsh:</p><ul class=\"govuk-list govuk-list--bullet govuk-list--spaced\"><li><span class=\"govuk-body govuk-!-font-weight-bold\">Welsh</span></li></ul>",
 
-    "enterYourDetails": "Welsh",
+    "enterYourDateOfBirth": "Welsh",
     "18OrOverWarning": "Welsh",
     "enterYourUkMobile": "Welsh",
     "enterYourUkMobileContext": "Welsh",
