revert to standard validation errors (pending content convos)

--- a/lang/cy.json
+++ b/lang/cy.json
@@ -600,9 +600,5 @@
     "enterYourUkMobile": "Welsh",
     "enterYourUkMobileContext": "Welsh",
     "enterYourUkMobileHint": "Welsh",
-    "yourDateOfBirth": "Welsh",
-    "aValidDateOfBirth": "Welsh",
-    "youAreUnder18Error": "Welsh",
-    "aValidUkMobileLike": "Welsh",
-    "yourUkMobile": "welsh"
+    "youAreUnder18Error": "Welsh"
 }
