--- a/lang/en.json
+++ b/lang/en.json
@@ -560,9 +560,5 @@
     "enterYourUkMobile": "Enter your UK mobile number",
     "enterYourUkMobileContext": "We need your mobile number so we can send you a code to use when you witness the donor signing their LPA.",
     "enterYourUkMobileHint": "For example, 07700 900 982 or +44 7700 900 982",
-    "yourDateOfBirth": "Your date of birth",
-    "aValidDateOfBirth": "a valid date of birth",
-    "youAreUnder18Error": "You’ve entered a date of birth that means you are under 18, you must be 18 to be a certificate provider",
-    "aValidUkMobileLike": "a UK mobile number, like 07700 900 982 or +44 7700 900 982",
-    "yourUkMobile": "your UK mobile number"
+    "youAreUnder18Error": "You’ve entered a date of birth that means you are under 18, you must be 18 to be a certificate provider"
 }
