MLPAB-711: Update CP enter your details with new content and error handling (#396)

--- a/lang/cy.json
+++ b/lang/cy.json
@@ -593,5 +593,12 @@
     "requestANewWitnessCode":  "welsh",
 
     "confirmYourIdentity": "Welsh",
-    "confirmYourIdentityContent": "<p class=\"govuk-body\">Welsh.</p><h2 class=\"govuk-heading-m\">Welsh</h2><p class=\"govuk-body\">Welsh:</p><ul class=\"govuk-list govuk-list--bullet govuk-list--spaced\"><li><span class=\"govuk-body govuk-!-font-weight-bold\">Welsh</span></li></ul>"
+    "confirmYourIdentityContent": "<p class=\"govuk-body\">Welsh.</p><h2 class=\"govuk-heading-m\">Welsh</h2><p class=\"govuk-body\">Welsh:</p><ul class=\"govuk-list govuk-list--bullet govuk-list--spaced\"><li><span class=\"govuk-body govuk-!-font-weight-bold\">Welsh</span></li></ul>",
+
+    "enterYourDateOfBirth": "Welsh",
+    "18OrOverWarning": "Welsh",
+    "enterYourUkMobile": "Welsh",
+    "enterYourUkMobileContext": "Welsh",
+    "enterYourUkMobileHint": "Welsh",
+    "youAreUnder18Error": "Welsh"
 }
