--- a/lang/cy.json
+++ b/lang/cy.json
@@ -87,15 +87,21 @@
         "other": "Daethpwyd o hyd i {{.PluralCount}} o gyfeiriadau"
     },
     "addressLine1": "Llinell cyfeiriad 1",
+    "addressLine1OfYourAddress": "Welsh",
     "addressLine2": "Llinell cyfeiriad 2 (dewisol)",
     "addressLine2Label": "Llinell cyfeiriad 2",
+    "addressLine3OfYourAddress": "Welsh",
     "addressLine3": "Llinell cyfeiriad 3 (dewisol)",
     "addressLine3Label": "Llinell cyfeiriad 3",
+    "addressLine2OfYourAddress": "Welsh",
     "townOrCity": "Tref neu ddinas",
+    "yourTownOrCity": "Welsh",
     "couldNotLookupPostcode": "Methu chwilio’r cod post",
     "invalidPostcode": "welsh",
     "aPostcode": "welsh",
+    "yourPostcode": "Welsh",
     "anAddressFromTheList": "welsh",
+    "yourAddressFromTheList": "Welsh",
     "noAddressesFound": "Welsh",
 
     "whoIsThisLpaFor": "Ar gyfer pwy mae’r LPA hwn?",
@@ -381,6 +387,7 @@
     "theCodeWeSentCertificateProvider": "Welsh",
 
     "selectYourIdentityOptions": "Dewiswch eich opsiynau i brofi pwy ydych",
+    "selectWhichDocumentYouWillUse": "Welsh",
     "pleaseSelectOneFormOfIdentity": "Welsh",
     "yourOneLogin": "Welsh",
     "yourOneLoginHint": "Welsh",
@@ -389,6 +396,7 @@
     "yourPassport": "Welsh",
     "yourPassportHint": "Welsh",
     "biometricResidencePermit": "Welsh",
+    "biometricResidencePermitHint": "Welsh",
     "drivingLicencePhotocard": "Welsh",
     "drivingLicencePhotocardHint": "Welsh",
     "drivingLicencePaper": "Welsh",
@@ -399,6 +407,7 @@
     "iDoNotHaveAnyOfTheseTypesOfIdentity": "Welsh",
     "weWillAdviseOnOtherWays": "Welsh",
     "fromTheListedOptions": "Welsh",
+    "whichDocumentYouWillUse": "Welsh",
 
     "yourChosenIdentityOptions": "Welsh",
     "yourChosenIdentityOptionsContent": "Welsh",
