Update identity and address pages

--- a/lang/en.json
+++ b/lang/en.json
@@ -84,17 +84,23 @@
         "other": "{{.PluralCount}} addresses found"
     },
     "addressLine1": "Address line 1",
+    "addressLine1OfYourAddress": "Line 1 of your address",
     "addressLine2": "Address line 2 (optional)",
     "addressLine2Label": "Address line 2",
+    "addressLine2OfYourAddress": "Line 2 of your address",
     "addressLine3": "Address line 3 (optional)",
     "addressLine3Label": "Address line 3",
+    "addressLine3OfYourAddress": "Line 3 of your address",
     "townOrCity": "Town or city",
+    "yourTownOrCity": "Your town or city",
     "couldNotLookupPostcode": "Could not lookup postcode",
     "invalidPostcode": "a valid postcode",
     "aPostcode": "a postcode",
+    "yourPostcode": "your postcode",
     "anAddressFromTheList": "an address from the list",
+    "yourAddressFromTheList": "your address from the list",
     "noAddressesFound": "We could not find any addresses for that postcode. Check your postcode is correct, or enter your address manually.",
-
+    
     "whoIsThisLpaFor": "Who is this LPA for?",
     "whoTheLpaIsFor": "who the LPA is for",
     "forMe": "For me",
@@ -336,6 +342,7 @@
     "witnessCodeTimeWarning": "When {{ .CpFirstNames }} receives this code, it is valid for 30 minutes. Please use the code within this time.",
 
     "selectYourIdentityOptions": "Select how you will confirm your identity",
+    "selectWhichDocumentYouWillUse": "Select which document you will use to confirm your identity",
     "pleaseSelectOneFormOfIdentity": "Please select one form of identity from this list",
     "yourOneLogin": "Your GOV.UK One Login Identity",
     "yourOneLoginHint": "We’ll ask you to sign in to your GOV.UK One Login account so we can confirm your name, address and date of birth. We will not see any other information about you",
@@ -344,6 +351,7 @@
     "yourPassport": "Your passport",
     "yourPassportHint": "This must be your current passport or one that expired less than 10 years ago. Your name on your passport must be the same as on your LPA.",
     "biometricResidencePermit": "UK biometric residence permit (BRP)",
+    "biometricResidencePermitHint": "This must be your current BRP. The name on your BRP must be the same as on your LPA.",
     "drivingLicencePhotocard": "UK driving licence (photocard)",
     "drivingLicencePhotocardHint": "This must be your full, current licence or one that expired less than 10 years ago. Your name and address on your licence must be the same as on your LPA.",
     "drivingLicencePaper": "UK driving licence (paper)",
@@ -351,9 +359,10 @@
     "aBankAccount": "A bank account",
     "aBankAccountHint": "We will not access any details from your bank account apart from your name, address and date of birth",
     "iDoNotHaveEitherOfTheseAccounts": "I do not have either of these types of accounts",
-    "iDoNotHaveAnyOfTheseTypesOfIdentity": "I do not have any of these types of identity",
+    "iDoNotHaveAnyOfTheseTypesOfIdentity": "I do not have any of these identity documents",
     "weWillAdviseOnOtherWays": "We will advise on other ways you can confirm your identity",
     "fromTheListedOptions": "from the listed options",
+    "whichDocumentYouWillUse": "which document you will use to confirm your identity",
 
     "yourChosenIdentityOptions": "Your chosen identity options",
     "yourChosenIdentityOptionsContent": "You told us that you have the following things to confirm your identity:",
