--- a/lang/cy.json
+++ b/lang/cy.json
@@ -615,8 +615,8 @@
     "success": "Welsh",
     "weHaveIdentifiedYourCertificateProviderReferenceNumber": "Welsh",
     "whoIsEligibleToBeCertificateProvider": "Welsh",
-    "whoIsEligibleToBeCertificateProviderContent": "<p class=\"govuk-body\">Welsh.</p><p class=\"govuk-body\">Welsh {{ .DonorFullName }}’s Welsh <span class=\"govuk-!-font-weight-bold\">Welsh</span>:</p><ul class=\"govuk-list govuk-list--bullet\"> <li>Welsh {{ .DonorFirstName }} Welsh</li> <li><span class=\"govuk-!-font-weight-bold\">Welsh</span> Welsh</li></ul>",
+    "whoIsEligibleToBeCertificateProviderContent": "<p class=\"govuk-body\">Welsh.</p><p class=\"govuk-body\">Welsh {{ .DonorFullNamePossessive }} Welsh <span class=\"govuk-!-font-weight-bold\">Welsh</span>:</p><ul class=\"govuk-list govuk-list--bullet\"> <li>Welsh {{ .DonorFirstName }} Welsh</li> <li><span class=\"govuk-!-font-weight-bold\">Welsh</span> Welsh</li></ul>",
     "whoCannotBeCertificateProvider": "Welsh",
-    "whoCannotBeCertificateProviderContent": "<p class=\"govuk-body\">Welsh:</p> <ul class=\"govuk-list govuk-list--bullet\"> <li>Welsh</li> <li>Welsh {{ .DonorFirstName }})</li> <li>Welsh {{ .DonorFirstName }}</li> <li>Welsh {{ .DonorFirstName }} Welsh</li> <li>Welsh {{ .DonorFirstName }} Welsh</li> <li>Welsh {{ .DonorFirstName }} Welsh</li> <li>Welsh {{ .DonorFirstName }}’s Welsh</li></ul>",
+    "whoCannotBeCertificateProviderContent": "<p class=\"govuk-body\">Welsh:</p> <ul class=\"govuk-list govuk-list--bullet\"> <li>Welsh</li> <li>Welsh {{ .DonorFirstName }})</li> <li>Welsh {{ .DonorFirstName }}</li> <li>Welsh {{ .DonorFirstName }} Welsh</li> <li>Welsh {{ .DonorFirstName }} Welsh</li> <li>Welsh {{ .DonorFirstName }} Welsh</li> <li>Welsh {{ .DonorFirstNamePossessive }} Welsh</li></ul>",
     "ifAnyStatementsApplyYouCannotBeACertificateProvider": "Welsh."
 }
