add optional label to email

--- a/lang/cy.json
+++ b/lang/cy.json
@@ -112,6 +112,7 @@
     "imHelping": "Rwy’n helpu rhywun arall i lenwi’r ffurflen LPA",
 
     "email": "Cyfeiriad e-bost",
+    "emailOptional": "Welsh",
     "phone": "Ffôn",
     "textMessage": "Neges destun",
     "post": "Post",
