--- a/lang/en.json
+++ b/lang/en.json
@@ -108,6 +108,7 @@
     "forSomeoneElse": "For someone else",
     "imHelping": "I’m helping someone else fill in the LPA form",
     "email": "Email address",
+    "emailOptional": "Email address (optional)",
     "phone": "Phone",
     "textMessage": "Text message",
     "post": "Post",
