Allow skipping entry of attorney addresses

--- a/lang/cy.json
+++ b/lang/cy.json
@@ -30,6 +30,7 @@
     "yes": "Ydw",
     "no": "Na",
     "confirm": "Welsh",
+    "skip": "Welsh",
 
     "yourDetails": "Eich manylion",
     "firstNames": "Enwau cyntaf",
