--- a/lang/en.json
+++ b/lang/en.json
@@ -30,6 +30,7 @@
     "yes": "Yes",
     "no": "No",
     "confirm": "Confirm",
+    "skip": "Skip",
 
     "yourDetails": "Your details",
     "firstNames": "First names",
