Add button to reuse LPA details from dashboard

--- a/lang/cy.json
+++ b/lang/cy.json
@@ -433,7 +433,7 @@
     "createAnotherLpa": "Creu LPA arall",
     "lpasInProgress": "LPAs wedi dechrau",
     "applicationNumber": "Rhif",
-    "options": "Opsiynau",
+    "reuseLpaDetails": "Welsh",
     "lastSaved": "Wedi achub diwethaf",
     "statusTag": "Welsh",
 
